--- a/modules/mu/templates/register.html
+++ b/modules/mu/templates/register.html
@@ -1,8 +1,15 @@
+{% from "helper/form.html" import render_field %}
+
 {% extends "layout.html" %}
 {% block content %}
 <h1>Register</h1>
-<form method="POST" action=".">
-  {{ form.email.label }} {{ form.email }}
+<form method="POST" action="/register">
+  <dl>
+    {{ render_field(form.username) }}
+    {{ render_field(form.email) }}
+    {{ render_field(form.password) }}
+    {{ render_field(form.confirm) }}
+  </dl>
   <input type="submit" value="Register" />
 </form>
 {% endblock %}
