--- a/modules/mu/templates/login.html
+++ b/modules/mu/templates/login.html
@@ -1,3 +1,13 @@
-<div>
-    Login page
-</div>
+{% from "helper/form.html" import render_field %}
+
+{% extends "layout.html" %}
+{% block content %}
+<h1>Login</h1>
+<form method="POST" action="/login">
+  <dl>
+    {{ render_field(form.username_or_email) }}
+    {{ render_field(form.password) }}
+  </dl>
+  <input type="submit" value="Login" />
+</form>
+{% endblock %}
