The default app module folder has been changed to 'app'. There is still a symlink there however, in order that I can have an application name of 'mu'. Meanwhile logout, login, and register work with a couple of bugs existing only -- and mostly related to usability.

--- a/modules/app/templates/layout.html
+++ b/modules/app/templates/layout.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     {% block head %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/reset.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}" />
     <title></title>
     {% endblock %}
   </head>
