--- a/modules/app/templates/login.html
+++ b/modules/app/templates/login.html
@@ -1,17 +1,10 @@
+{% from "helper/core.html" import output_flashed_messages %}
 {% from "helper/form.html" import render_field %}
+{% extends layout_template if layout_template is defined else "main-layout.html" %}
 
-{% extends "layout.html" %}
 {% block content %}
-  <h1>Login</h1>
-  {% with messages = get_flashed_messages(with_categories=True) %}
-    {% if messages %}
-      <ul class="messages">
-        {% for category, message in messages %}
-        <li class="{{ category }}">{{ message }}</li>
-        {% endfor %}
-      </ul>
-    {% endif %}
-  {% endwith %}
+<h1>Login</h1>
+  {{ output_flashed_messages() }}
   <form method="POST" action="/login">
     {{ form.csrf }}
     <dl>
