Very basic form to add a product now exists. Nothing is tested. User experience is poor: everything should be simpler and tidier. Simplification and tidying until I understand everything better are my next steps. Then bug-fixing what I leave.

--- a/modules/app/templates/product/show_products.html
+++ b/modules/app/templates/product/show_products.html
@@ -1,5 +1,6 @@
 {% extends layout_template if layout_template is defined else "main-layout.html" %}
 
 {% block content %}
-  <h1>Products</h1>
+    <h1>Products</h1>
+    <div>{{ products|safe }}</div>
 {% endblock %}
