Most recent changes.

--- a/modules/app/templates/home.html
+++ b/modules/app/templates/home.html
@@ -2,5 +2,5 @@
 {% extends layout_template if layout_template is defined else "main-layout.html" %}
 
 {% block content %}
-Test
+Test. {{ username }}
 {% endblock %}
