(1) Change to the database. (2) Better redirects from login/register. (3) Add product works again. Barely.

--- a/modules/app/templates/home.html
+++ b/modules/app/templates/home.html
@@ -2,5 +2,8 @@
 {% extends layout_template if layout_template is defined else "main-layout.html" %}
 
 {% block content %}
-Test. {{ username }}
+    Test.
+    {% if username %}
+    Your username is: {{ username }}
+    {% endif %}
 {% endblock %}
