--- a/modules/app/templates/product/add_product.html
+++ b/modules/app/templates/product/add_product.html
@@ -5,12 +5,13 @@
 {% block content %}
   <h1>Product</h1>
   {{ output_flashed_messages() }}
-  <form method="POST" action="/add/{{ product_type }}{% if content_author
-      %}/to/{{ content_author }}{% endif %}">
+  <form method="POST" action="/add/{{ product_type }}{% if agent
+      %}/to/{{ agent }}{% endif %}">
     {{ form.csrf }}
+    {{ form.agent_type }}
     <dl>
-        {{ render_field(form.artist) }}
-        {{ render_field(form.label) }}
+        {{ render_field(form.agent) }}
+        {{ render_field(form.content_owner) }}
         {{ render_field(form.release_date) }}
         {{ render_field(form.title) }}
         {{ render_field(form.type) }}
