Bootstrap now being used a little more. Fixed a few bugs with account creation. Mostly visual changes.

--- a/modules/app/static/style/main.css
+++ b/modules/app/static/style/main.css
@@ -1,8 +1,10 @@
-
-
-/* ===== Primary Styles ========================================================
-   Author:
+/* ===== Primary Styles ======================================================
+   Author: Seb Insua
    ========================================================================== */
+.padded-flow {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
 
 
 
