--- a/modules/app/templates/home.html
+++ b/modules/app/templates/home.html
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="hero-unit">
             <h1>Welcome{% if user %} {{ user.username }}{% endif %}.</h1>
-            <p>Have fun on the site. :)</p>
+            <p class="lead">When will something happen?</p>
         </div>
     </div>
 {% endblock %}
