Changes to the coding style.

--- a/modules/app/templates/layout/navigation_bar.html
+++ b/modules/app/templates/layout/navigation_bar.html
@@ -8,21 +8,29 @@
                 <span class="icon-bar"></span>
             </a>
             <a class="brand" href="/">{{ brand }}</a>
+
             <div class="nav-collapse">
                 <ul id="nav-main" class="nav pull-left">
                     {% for href, id, caption, requires_logged_in in navigation_bar_main %}
-                        <li{% if id == active_page %} class="active"{% endif %}><a href="{{ href|e }}">{{ caption|e }}</a></li>
+                        <li
+                                {% if id == active_page %} class="active"{% endif %}><a
+                                href="{{ href|e }}">{{ caption|e }}</a></li>
                     {% endfor %}
                 </ul>
                 <ul id="nav-account" class="nav pull-right">
                     {% if user %}
                         <li><a href="#">Gravatar + {{ user.username }}</a></li>
                         {% for href, id, caption, requires_logged_in in navigation_bar_account if requires_logged_in == True %}
-                            <li{% if id == active_page %} class="active"{% endif %}><a href="{{ href|e }}">{{ caption|e }}</a></li>
+                            <li
+                                    {% if id == active_page %} class="active"{% endif %}><a
+                                    href="{{ href|e }}">{{ caption|e }}</a></li>
                         {% endfor %}
                     {% else %}
-                        {% for href, id, caption, requires_logged_in in navigation_bar_account if requires_logged_in == False %}
-                            <li{% if id == active_page %} class="active"{% endif %}><a href="{{ href|e }}">{{ caption|e }}</a></li>
+                        {% for href, id, caption, requires_logged_in in navigation_bar_account if requires_logged_in ==
+                    False %}
+                            <li
+                                    {% if id == active_page %} class="active"{% endif %}><a
+                                    href="{{ href|e }}">{{ caption|e }}</a></li>
                         {% endfor %}
                     {% endif %}
                 </ul>
