--- a/modules/app/templates/product/show_products.html
+++ b/modules/app/templates/product/show_products.html
@@ -11,24 +11,26 @@
         {% endif %}
         <table class="table table-striped table-bordered table-condensed">
             <thead>
-                <th>Artist</th>
-                <th>Release</th>
-                <th>Expected On</th>
+            <th>Artist</th>
+            <th>Release</th>
+            <th>Expected On</th>
             </thead>
             <tbody>
-                {% if products|length > 0 %}
-                    {% for product in products %}
-                        <tr class="{{ loop.cycle('odd', 'even') }}">
-                            <td>{{ product.agents|join(', ') }}</td>
-                            <td>{{ product.title }} [{{ product.product_status.name }} {{ product.product_type.name }} on {{ product.product_medium.name }}]</td>
-                            <td>{{ product.event.predicted_textual_release_date }}</td>
-                        </tr>
-                    {% endfor %}
-                {% else %}
-                    <tr>
-                        <td colspan="3">No releases found.</td>
+            {% if products|length > 0 %}
+                {% for product in products %}
+                    <tr class="{{ loop.cycle('odd', 'even') }}">
+                        <td>{{ product.agents|join(', ') }}</td>
+                        <td>{{ product.title }} [{{ product.product_status.name }} {{ product.product_type.name }}
+                            on {{ product.product_medium.name }}]
+                        </td>
+                        <td>{{ product.event.predicted_textual_release_date }}</td>
                     </tr>
-                {% endif %}
+                {% endfor %}
+            {% else %}
+                <tr>
+                    <td colspan="3">No releases found.</td>
+                </tr>
+            {% endif %}
             </tbody>
         </table>
     </div>
