--- a/modules/app/templates/layout/navigation_bar.html
+++ b/modules/app/templates/layout/navigation_bar.html
@@ -19,18 +19,24 @@
                 </ul>
                 <ul id="nav-account" class="nav pull-right">
                     {% if user %}
-                        <li><a href="#">Gravatar + {{ user.username }}</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gravatar + {{ user.username }}<b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">View Profile</a></li>
+                                <li><a href="#">Edit Account</a></li>
+                            </ul>
+                        </li>
                         {% for href, id, caption, requires_logged_in in navigation_bar_account if requires_logged_in == True %}
-                            <li
-                                    {% if id == active_page %} class="active"{% endif %}><a
-                                    href="{{ href|e }}">{{ caption|e }}</a></li>
+                            <li{% if id == active_page %} class="active"{% endif %}>
+                                  <a href="{{ href|e }}">{{ caption|e }}</a>
+                            </li>
                         {% endfor %}
                     {% else %}
                         {% for href, id, caption, requires_logged_in in navigation_bar_account if requires_logged_in ==
                     False %}
-                            <li
-                                    {% if id == active_page %} class="active"{% endif %}><a
-                                    href="{{ href|e }}">{{ caption|e }}</a></li>
+                            <li{% if id == active_page %} class="active"{% endif %}>
+                                <a href="{{ href|e }}">{{ caption|e }}</a>
+                            </li>
                         {% endfor %}
                     {% endif %}
                 </ul>
