* NotifyType now exists and is attached to a user record. * FuzzyTime exists -- and does nothing... * ServiceType comparisons are now lowercase.

--- a/modules/app/templates/helper/core.html
+++ b/modules/app/templates/helper/core.html
@@ -16,9 +16,12 @@
 {% endwith %}
 {% endmacro %}
 
+{% set brand = "mu" -%}
+
 {% set navigation_bar_main = [
 ("/all/releases", "releases", "New Releases", False)
 ] -%}
+
 {% set navigation_bar_account = [
 ("/logout", "logout", "Logout", True),
 ("/register", "register", "Register", False),
