--- a/modules/app/templates/layout/navigation_bar.html
+++ b/modules/app/templates/layout/navigation_bar.html
@@ -1,5 +1,4 @@
-{% from "helper/core.html" import navigation_bar_main, navigation_bar_account -%}
-{% set brand = "mu" -%}
+{% from "helper/core.html" import navigation_bar_main, navigation_bar_account, brand -%}
 
 <div class="navbar">
     <div class="navbar-inner">
