--- a/modules/app/templates/home.html
+++ b/modules/app/templates/home.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="container">
         <div class="hero-unit">
-            <h1>Welcome{% if user %} {{ user.username }}{% endif %}.</h1>
+            <h1>Welcome{% if user %}, {{ user.username }}{% endif %}.</h1>
 
             <p class="lead">When will something happen?</p>
         </div>
